# proyecto_cpp1

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
src/: cell.h  main.cpp  mainWindow.cpp  mainWindow.h  moc_mainWindow.cpp  spreadSheet.cpp  spreadSheet.h
src/core/: cell.h  spreadSheet.cpp  spreadSheet.h
src/ui/: mainWindow.cpp  mainWindow.h
